--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@
 #  manually added section start                                                #
 #                                                                              #
 ################################################################################
-
+junk
+junk.*
 ################################################################################
 #                                                                              #
 #  manually added section finish                                               #
